# codecompanion

./: .codecompanion_settings.json  .codecompanion_state.json  .coverage  .gitignore  .replit  AUDIT_REPORT.md  CLI_USAGE.md  CLOUD.md  CODEBASE_AUDIT_REPORT.md  COPY-PASTE-INSTALL.txt  DEPENDENCY_AUDIT_REPORT.md  DEPLOYMENT-READY.md  DEPLOYMENT.md  DOCKER.md  FULL_AUDIT_REPORT.md  INSTALL.md  MANIFEST.in  MONITORING.md  Makefile  QUICK_START.md  README.md  SECURITY.md  TROUBLESHOOTING.md  api.py  api.py.bak  api_config.py  api_endpoints_documentation.md  api_server.py  api_server.py.bak  app.py  artifacts.commands  artifacts.patch  bandit_learning.db  bus.py  cc  check_db.py  clear_openai_key.py  cli.py  constants.py  constraints.txt  (+48 more)
.cc/: agent_pack.json  bootstrap.txt  final_report.md  handoff.json  packaging_report.md  state.json
.claude/: settings.local.json
agents/: __init__.py  base_agent.py  claude_agent.py  code_generator.py  debugger.py  gemini_agent.py  gpt4_agent.py  live_agent_workers.py  project_manager.py  test_writer.py  ui_designer.py
analysis/: COMPREHENSIVE_AUDIT_REPORT.md  code_index.json  failures.md  graph.md  handoff.analysis  handoff_analysis.json
attached_assets/: Pasted--REPLIT-AGENT-TASK-Replace-Simulation-with-Real-AI-API-Execution-The-current-system-is-showing--1754850264482_1754850264484.txt  Pasted-ADD-REAL-TIME-EVENT-SOURCED-ORCHESTRATION-WITH-REDIS-STREAMS-Enhance-the-existing-system-with-prod-1754814997059_1754814997060.txt  Pasted-INFO-storage-database-manager-Updated-performance-for-Code-Generator-GPT-4-on-content-generation--1754853901760_1754853901762.txt  Pasted-Implement-a-production-grade-Redis-Streams-bus-and-retain-a-simple-mock-for-tests-Create-bus-py--1754857302241_1754857302307.txt  Pasted-You-are-a-CLI-engineer-Update-cli-py-so-it-Reads-API-base-from-CC-API-URL-default-http-0-0-0-1754942399870_1754942399873.txt  Pasted-You-are-a-senior-Python-engineer-Create-strict-config-and-a-real-Redis-Streams-bus-fail-fast-if-mi-1754859852618_1754859852621.txt  Pasted-You-are-a-senior-Python-engineer-Replace-api-py-with-a-token-protected-FastAPI-API-Keep-only-these-1754941936520_1754941936522.txt  Pasted-You-are-an-expert-repo-auditor-Produce-a-compact-machine-readable-project-snapshot-for-a-multi-age-1754856526359_1754856526361.txt
cc-env/: pyvenv.cfg
cc_artifacts/: backend_report.txt  docs_report.txt  frontend_report.txt  quality_report.json  test_report.txt
cc_cli/: __init__.py  main.py
test-fresh/: cc  pyproject.toml
test-fresh/.cc/: bootstrap.txt
test-fresh/.cc/agents/: analyzer.md  bug_triage.md  dep_auditor.md  env_doctor.md  fixer.md  installer.md  orchestrator.md  pr_preparer.md  test_runner.md  web_doctor.md
test-fresh/codecompanion/: bootstrap.py  cli.py  detector.py  llm.py  repl.py  runner.py
(+215 files in other folders)
