[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.62.0",
    "fastapi>=0.116.1",
    "google-genai>=1.29.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.2",
    "openai>=1.99.6",
    "plotly>=6.2.0",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "redis[hiredis]>=6.4.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
    "pandas>=2.3.1",
]
