[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codecompanion"
version = "0.1.0"
description = "CodeCompanion launcher for Replit shells with built-in agent bootstrap"
requires-python = ">=3.9"
dependencies = ["rich>=13.7", "httpx>=0.27", "fastapi>=0.100.0", "uvicorn>=0.23.0"]

[project.scripts]
codecompanion = "codecompanion.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["codecompanion*"]

[tool.setuptools.package-data]
"codecompanion.defaults" = ["*.txt", "*.json"]
"codecompanion" = ["templates/*.html"]