[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codecompanion"
version = "0.1.0"
description = "A standalone multi-agent Dev OS with live Control Tower dashboard"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aidan Jackson" }]
license = { text = "Proprietary - for personal use only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = ["rich>=13.7", "httpx>=0.27", "fastapi>=0.100.0", "uvicorn>=0.23.0", "psutil>=5.9.0"]

[project.scripts]
codecompanion = "codecompanion.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["codecompanion*"]

[tool.setuptools.package-data]
"codecompanion.defaults" = ["*.txt", "*.json"]
"codecompanion" = ["templates/*.html"]