[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codecompanion"
version = "1.0.0"
description = "AI-powered development agents for any project"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.scripts]
codecompanion = "codecompanion.cli:main"

[tool.setuptools]
include-package-data = true
